# FastAPIAgenticUnderEng

./: main.py  pyproject.toml
app/: __init__.py  app.py
app/core/config/: settings.py
app/features/: __init__.py
app/features/auth/: auth_route.py  auth_service.py
app/features/chat/: __init__.py  chat_route.py  chat_schemas.py  tools_route.py
app/features/users/: user_entity.py  user_service.py
app/llm_functions/: AgentGraph.py  AgentLLM.py  LLMCall.py  LLMDefination.py
app/mcp/: __init__.py  base_tool.py  mcp_config.json  mcp_service.py  tool_loader.py  tool_manager.py  tool_registry.py
app/mcp/tools/: __init__.py  current_date.py  google_search.py  sqlite_tool.py
app/middleware/: auth_middleware.py
