

[project]
name = "agentic-fastapi"
version = "0.1.0"
description = "FastAPI application with agentic behavior using LangGraph"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic[email]>=2.7.4,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=1.0.0,<2.0.0",
    "openai>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.32.0,<2.0.0",
    "pyjwt==2.8.0",
    "bcrypt>=5.0.0",
    "langchain-google-genai>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx>=0.25.2,<0.26.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
    "isort==5.13.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/agentic-fastapi"
Repository = "https://github.com/yourusername/agentic-fastapi.git"
Documentation = "https://github.com/yourusername/agentic-fastapi#readme"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
